Browse through content pieces from content creator

--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -7375,3 +7375,5 @@ input[type="checkbox"] {
 .cbp_tmtimeline .action-links li:last-child:after {
   content: "";
 }
+
+a.browse-content-pieces-item{height:120px;}
