--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -3108,4 +3108,5 @@ select:before {
   width: 100%;
   height: 100%;
 }
+a.browse-content-pieces-item{height:150px;}
 /*# sourceMappingURL=custom.css.map */
