--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
@@ -11,22 +11,18 @@
 			<span class="sort anim150 asc" data-sort="data-subjects" data-order="desc"></span> 
 			<span class="sort anim150 desc" data-sort="data-subjects" data-order="asc"></span>
 		</div>
-
-		{{#take_quiz}}
-			<div class="meta modules">
-			    Total Chapters
-			</div>
-		{{/take_quiz}}
-
-		<div class="meta rec">{{#take_quiz}} Practice {{/take_quiz}} Status 
+	
+		{{^take_quiz}}
+		<div class="meta rec">Status 
 			<span class="sort anim150 asc" data-sort="data-modules" data-order="desc"></span>
 			<span class="sort anim150 desc" data-sort="data-modules" data-order="asc"></span>
 		</div>
+		{{/take_quiz}}
 
 		{{#take_quiz}}
-			<div class="meta modules rec">
-			    Take at Home Status 
-			</div>
+			<div class="meta modules">Total Chapters</div>
+			<div class="meta rec"> Quizzes</div>
+			<div class="meta modules rec">Training Modules</div>
 		{{/take_quiz}}
 		
 	</div>
