--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -3108,4 +3108,8 @@ select:before {
   height: 100%;
 }
 a.browse-content-pieces-item{height:160px;}
+
+#textbooks.list.myClass .txtbook.noCursor {
+  cursor: auto;
+}
 /*# sourceMappingURL=custom.css.map */
