Student Dashboard: removed chapter count & changed text for quizzes & training modules columns

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -16,23 +16,11 @@
 </div>
 
 {{#take_quiz}}
-<div class="meta">
-    <p>{{chapter_count}}</p>
-</div>
-{{/take_quiz}}
-
-{{#take_quiz}}
     <div class="meta modules rec">
-      <div>
-        <h4 class="m-t-20">No. of Quizzes: {{total_quizzes}}</h4>
         <a href="{{quizzes_url}}" class="btn btn-default">View Quizzes</a>
-      </div>
     </div>
     <div class="meta modules rec">
-      <div>
-        <h4 class="m-t-20">No. of Training Modules: {{total_student_training_modules}}</h4>
-        <a href="{{training_modules_url}}" class="btn btn-default">View Training Modules</a>
-      </div>
+        <a href="{{training_modules_url}}" class="btn btn-default">View Lectures/e-Book</a>
     </div>
 
 {{/take_quiz}}
