--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
@@ -15,9 +15,8 @@
 		{{/take_quiz}}
 
 		{{#take_quiz}}
-			<div class="meta modules">Total Chapters</div>
 			<div class="meta rec"> Quizzes</div>
-			<div class="meta modules rec">Training Modules</div>
+			<div class="meta modules rec">Lectures/e-Book</div>
 		{{/take_quiz}}
 
 	</div>
