added spinner while archiving or publishing

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -6,7 +6,7 @@
             <option value="publish">Publish</option>
             <option value="archive">Archive</option>
         </select>
-        <button class="btn btn-info btn-small"><i class="fa"></i> Change Status</button>
+        <button class="btn btn-info btn-small"><i class="fa spinner"></i> Change Status</button>
     </div>
     <table class="table table-bordered m-t-15" id="content-pieces-table" >
         <thead>
@@ -38,7 +38,7 @@
             <option value="publish">Publish</option>
             <option value="archive">Archive</option>
         </select>
-        <button class="btn btn-info btn-small"><i class="fa"></i> Change Status</button>
+        <button class="btn btn-info btn-small"><i class="fa spinner"></i> Change Status</button>
     </div>
     <div id="pager" class="pager">
         <i class="cursor fa fa-chevron-left prev"></i>
