while creating quiz display ans must be checked by default

--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -239,7 +239,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <div class="checkbox check-info checkbox-circle perm radioCheck">
-                                            <input name="permissions[display_answer]" id="answer" type="checkbox" value="1">
+                                            <input name="permissions[display_answer]" id="answer" type="checkbox" value="1" checked>
                                             <label for="answer">Display Answer</label>
                                         </div>
                                     </div>
