--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -27,12 +27,10 @@
 
     {{/quiz_report}}
     {{^studentTrainingModule}}
-    <button type="button" class="btn btn-white btn-cons goto-prev-page">
-        <h4 class="bold text-info no-margin">
-            <span class="fa fa-arrow-circle-left"></span>
-            Back to List of Quizzes
-        </h4>
-    </button>
+        <div class="direction text-center goto-prev-page">
+                <div class="icon"><a href="javascript:" class="btn fab-content"><i class="fa fa-hand-o-left"></i></a></div>
+                <p class="welcome-text">It's time to take a quiz</p>
+        </div>
     {{/studentTrainingModule}}
     {{#studentTrainingModule}}
     <button type="button" class="btn btn-white btn-cons pull-right continue-student-training-module">
