--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -44,3 +44,14 @@
     <div id="quiz-details-region"></div>
 </div>
 <div id="content-display-region"></div>
+
+    {{^studentTrainingModule}}
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <div class="all-d-best">
+                    <i class="fa fa-thumbs-o-up fa-2x"></i> <span>All the Best ...</span>
+                </div>
+            </div>        
+        </div>    
+    {{/studentTrainingModule}}
+
