--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
@@ -10,7 +10,7 @@
 
 
  // ---------------------------
- // Lecture training styles -----------
+ // LECTURE TRAINING STYLES -----------
  // ---------------------------
 
  .teacher-app {
@@ -28,7 +28,7 @@
                 left: -120px;
                 @media @i-tab-landscape{
                     position: static;
-                }            
+                }                
             }
           }
          .grid {
@@ -84,7 +84,7 @@
                          button#start-module {
                              padding: 10px 0px;
                              background: @button-1-danger;
-                             .box-shadow(0px 1px 1px 5px rgba(50, 50, 50, 0.2));
+                             .box-shadow(0 3px 0 0 rgba(192, 204, 203, 0.9));
                              border: 0;
                              font-size: 1.2em;
                              width: 75%;
@@ -122,7 +122,7 @@
  
  
  // ---------------------------
- // Timeline Styles -----------
+ // TIMELINE STYLES -----------
  // ---------------------------
  .cbp_tmtimeline {
      & > li {
