--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_variables.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_variables.less
@@ -54,7 +54,7 @@
 @mobile:      ~"only screen and (max-width: 529px)";
 
 
-@small-tablet: ~"only screen and (min-width: 530px) and (max-width: 767px)";
+@tablet: ~"only screen and (min-width: 530px) and (max-width: 767px)";
 
 
 
@@ -88,7 +88,14 @@
 
 
  // ---------------------------
- // NORMAL DESKTOP WITH 1024 -----------
+ // DEFAULT DESKTOP WITH 1024-----------
+ // ---------------------------
+
+@desktop-def: ~"only screen and (max-width: 1024px)";
+
+
+ // ---------------------------
+ // NORMAL DESKTOP -----------
  // ---------------------------
 
 @desktop: ~"only screen and (min-width: 1025px) and (max-width: 1280px)";
