--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
@@ -1,21 +1,32 @@
+//  _____            _     _                         _       _         _           
+// |  __ \          | |   | |                       | |     | |       | |          
+// | |  | | __ _ ___| |__ | |__   ___   __ _ _ __ __| |  ___| |_ _   _| | ___  ___ 
+// | |  | |/ _` / __| '_ \| '_ \ / _ \ / _` | '__/ _` | / __| __| | | | |/ _ \/ __|
+// | |__| | (_| \__ \ | | | |_) | (_) | (_| | | | (_| | \__ \ |_| |_| | |  __/\__ \
+// |_____/ \__,_|___/_| |_|_.__/ \___/ \__,_|_|  \__,_| |___/\__|\__, |_|\___||___/
+//                                                                __/ |            
+//                                                               |___/             
 
 
- //  _____            _     _                         _       _         _           
- // |  __ \          | |   | |                       | |     | |       | |          
- // | |  | | __ _ ___| |__ | |__   ___   __ _ _ __ __| |  ___| |_ _   _| | ___  ___ 
- // | |  | |/ _` / __| '_ \| '_ \ / _ \ / _` | '__/ _` | / __| __| | | | |/ _ \/ __|
- // | |__| | (_| \__ \ | | | |_) | (_) | (_| | | | (_| | \__ \ |_| |_| | |  __/\__ \
- // |_____/ \__,_|___/_| |_|_.__/ \___/ \__,_|_|  \__,_| |___/\__|\__, |_|\___||___/
- //                                                                __/ |            
- //                                                               |___/             
 
+
+// ---------------------------
+// INTRO(WELCOME)  -----------
+// ---------------------------
+
+.intro {
+    padding: 35px;
+    .welcome-text {
+        font-size: 1.9em;
+        margin: 0;
+    }
+}
 
 
 
 // ---------------------------
 // QUIZ CARD STYLES -----------
 // ---------------------------
-
 
 .quiz-cards {
     .display(flex);
@@ -25,19 +36,19 @@
     position: relative;
     overflow: inherit;
     height: 220px;
-    @media @i-tab-landscape{
+    @media @i-tab-landscape {
         height: 200px;
     }
     .notification {
         position: absolute;
-        right: -10px;
+        right: -4px;
         top: -10px;
         background: #FF0D00;
         height: 25px;
         width: 25px;
         border-radius: 50%;
         color: #fff;
-        font: 16px comic-relief, arial;
+        font: 16px open-sans, arial;
         cursor: pointer;
     }
     .quiz-img {
@@ -46,10 +57,10 @@
         .align-items(center);
         width: 30%;
         height: 220px;
-    @media @i-tab-landscape{
-        height: 200px;
-    }        
-        img{
+        @media @i-tab-landscape {
+            height: 200px;
+        }
+        img {
             width: 100%;
             height: 100%;
         }
@@ -81,7 +92,7 @@
             img {
                 width: 65%;
                 .transition(all .2s ease-in-out);
-                &:hover{
+                &:hover {
                     .transform(scale(1.2));
                 }
                 @media @i-tab-landscape {
@@ -97,7 +108,6 @@
 // ---------------------------
 // DASHBOARD RIGHT SECTION TRAPEZIOD DIV CREATED IN CSS AND NOT AN IMAGE -----------
 // ---------------------------
-
 
 .trapezoid {
     border-bottom: 88px solid #2f0e09;
@@ -135,11 +145,9 @@
 
 
 
-
 // ---------------------------
 // QUIZ SCHEDULER/UPCOMING QUIZZES STYLES -----------
 // ---------------------------
-
 
 .quiz-schedule {
     background: @quiz-schedule-color;
@@ -192,15 +200,142 @@
 }
 
 
+
 // ---------------------------
 // IF NO QUIZ AVALIABLE -----------
 // ---------------------------
 
-
-.no-quiz{
+.no-quiz {
     color: @quiz-link-color1;
     text-transform: capitalize;
 }
 
 
 
+// ---------------------------
+// BOOTSTRAP INHERIT OF FONT-FAMILY -----------
+// ---------------------------
+
+.walnut-content {
+    font-family: 'open-sans', 'arial';
+}
+
+
+
+// ---------------------------
+// DASHBAORD SETTINGS BUTTON EFFECT -----------
+// ---------------------------
+
+.fixed-container {
+    position: relative;
+    z-index: 99999;
+    display: block;
+    .btn-nav {
+        position: absolute;
+        display: flex !important;
+        .transition(.2s ease-out);
+        cursor: pointer;
+        z-index: 9999;
+        .border-radius(50%);
+        .box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));
+        &.setting-bg {
+            background: @profile-color !important;
+            i {
+                color: #fff;
+            }
+            &:focus, &:active, &:hover {
+                background: @profile-color;
+            }
+        }
+        &:hover, &:active, &:focus {
+            background: @profile-color !important;
+            .transform(scale(1.2));
+            i {
+                color: @color-white;
+            }
+        }
+    }
+    .waves-effect {
+        position: relative;
+        cursor: pointer;
+        display: inline-block;
+        overflow: hidden;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
+        vertical-align: middle;
+        will-change: opacity, transform;
+        .transition(all .3s ease-out);
+    }
+    .circle-container {
+        visibility: visible;
+        position: absolute;
+        height: 400px;
+        left: 0px;
+        width: 80px;
+        top: -18px;
+        .round-circle {
+            .border-radius(50%);
+            background-color: #69b8b5;
+            width: 56px;
+            height: 56px;
+            position: absolute;
+            top: 20px;
+            text-align: center;
+            line-height: 60px;
+            visibility: hidden;
+            .box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));
+            >a {
+                display: block;
+                background: #F7F7F7;
+                .transition(background 0.5s ease-in-out);
+                &:hover {
+                    background: @profile-color;
+                    >i {
+                        color: #fff;
+                    }
+                }
+                i {
+                    color: @quiz-link-color1;
+                    font-size: 26px;
+                    .transition(color 0.5s ease-in-out);
+                }
+            }
+            .first-circle {
+                z-index: 4;
+            }
+            .second-circle {
+                z-index: 3;
+            }
+            .third-circle {
+                z-index: 2;
+            }
+            .forth-circle {
+                z-index: 1;
+            }
+        }
+    }
+}
+
+
+
+
+// ---------------------------
+// DASHBAORD SETTINGS BUTTON ANIMATION KEYFRAMES(ROTATE EFFECT) -----------
+// ---------------------------
+
+
+//Rotate icon
+ .keyframes(~'rotateIcon, from{ transform:rotateZ(0); } to{ transform:rotateZ(360deg);} ');
+
+//UnRotate icon
+.keyframes(~'unRotateIcon, from{ transform:rotateZ(360deg); } to{ transform:rotateZ(0);} ');
+
+
+//Animation calls
+.rotateIcon {
+    .animation(rotateIcon 1s);
+}
+
+.unRotateIcon {
+    .animation(unRotateIcon 1s);
+}
