--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-screen.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-screen.less
@@ -39,6 +39,10 @@
         background: @quiz-color;
         word-wrap: break-word;
         font-weight: bold;
+        @media @desktop-def{
+            padding: 10px;
+            height: 170px;
+        }
         .lecture, .chapter, {
             // &:extend(.chapter);
             .display(flex);
@@ -74,6 +78,9 @@
             .justify-content(flex-start);
             font-size: 0.8em;
             font-weight: bold;
+            @media @desktop-def{
+                margin: 8px 0 30px 0;
+            }
             div:last-child {
                 padding-left: 30px;
             }
